--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,73 @@
 }
 
 .general {
-  background: linear-gradient(90deg, rgb(224, 243, 192), rgba(207, 238, 149, 0.753));
+  background: linear-gradient(
+    90deg,
+    rgb(224, 243, 192),
+    rgba(207, 238, 149, 0.753)
+  );
   width: "100%";
   height: 26em;
   border-radius: 8px;
-  
+}
+
+hr {
+  border: 0.1px solid rgba(0, 0, 0, 0.568);
+  /* outline: 1px solid rgb(0, 0, 0); */
+  width: 8em;
+  z-index: 99;
+}
+
+/* WE OFFER */
+.background {
+  background-color: rgba(234, 241, 252, 1);
+  width: 100%;
+  height: 500px;
+  position: relative;
+  top: 17em;
+}
+
+/* .card {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.651);
+  border-radius: 7px;
+  padding: 1.5em;
+} */
+
+.card {
+  background-color: rgba(255, 255, 255, 0.651);
+  padding: 1.5em;
+  height: 300px; /* Set a fixed height */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Align content evenly */
+}
+
+.pickup {
+  font-weight: 700;
+  color: #ff6503;
+}
+.errands {
+  font-weight: 700;
+  color: #000000;
+}
+.delivery {
+  font-weight: 700;
+  color: #0041a9;
+}
+
+.pikupimage {
+  position: relative;
+  left: 35px;
+  top: 1em;
+}
+
+/* ?partner with us */
+.partnerBg {
+  background-color: rgba(0, 0, 0, 0.651);
+  padding: 1.5em;
+  height: 300px; /* Set a fixed height */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Align content evenly */
 }
