--- a/src/App.css
+++ b/src/App.css
@@ -65,34 +65,6 @@
   width: 24em;
 }
 
-/* the responsive media query of the application */
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  .hand-icon {
-    position: absolute;
-    max-width: 10%;
-    bottom: 0px;
-    display: none;
-  }
-  .staff {
-    position: absolute;
-    bottom: 35em;
-    right: -8%;
-    width: 29em;
-}
-  .general {
-    background: linear-gradient(
-      90deg,
-      rgb(224, 243, 192),
-      rgba(207, 238, 149, 0.753)
-    );
-    width: "100%";
-    border-radius: 8px;
-    height: 33em;
-  }
-  
-}
-
 hr {
   border: 0.1px solid rgba(0, 0, 0, 0.568);
   /* outline: 1px solid rgb(0, 0, 0); */
@@ -104,9 +76,9 @@ hr {
 .background {
   background-color: rgba(234, 241, 252, 1);
   width: 100%;
-  height: 500px;
   position: relative;
   top: 17em;
+  /* height: 500px; */
 }
 
 /* .card {
@@ -123,6 +95,7 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: space-between; /* Align content evenly */
+  z-index: 1;
 }
 
 .pickup {
@@ -143,7 +116,21 @@ hr {
   left: 35px;
   top: 1em;
 }
+.position-relative {
+  position: relative;
+}
 
+.background-text {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 6rem; /* Adjust size as needed */
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.1); /* Transparent black */
+  z-index: 0;
+  text-transform: uppercase;
+}
 /* ?partner with us */
 .partnerBg {
   background-image: url("./assets/partner.png");
@@ -156,6 +143,74 @@ hr {
   flex-direction: column;
   justify-content: space-between; /* Align content evenly */
 }
+/* the responsive media query of the application */
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .hand-icon {
+    position: absolute;
+    max-width: 10%;
+    bottom: 0px;
+    display: none;
+  }
+  .staff {
+    position: absolute;
+    bottom: 35em;
+    right: -8%;
+    width: 29em;
+  }
+  .general {
+    background: linear-gradient(
+      90deg,
+      rgb(224, 243, 192),
+      rgba(207, 238, 149, 0.753)
+    );
+    width: "100%";
+    border-radius: 8px;
+    height: 33em;
+  }
+  .pikupimage {
+    position: relative;
+    left: 35px;
+    top: 0em;
+  }
+  /* what we offer card media query for responsiveness */
+  .card {
+    background-color: rgba(255, 255, 255, 0.651);
+    padding: 1.5em;
+    height: 335px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .partnerBg {
+    background-image: url("./assets/partner.png");
+    background-size: 1000px 450px; /* Set specific width and height for the background */
+    background-repeat: no-repeat;
+    background-position: center; /* Center the image within the div */
+    /* padding: 5.5em; */
+    height: 700px; /* Set the height of the container */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Align content evenly */
+  }
+  .partnerForm {
+    background: white;
+    width: 100%;
+    box-shadow: rgb(0 0 0 / 16%) 0px 10px 30px;
+    border-radius: 8px;
+    padding: 2em;
+  }
+}
+
+.partnerForm {
+  background: white;
+  width: 80%;
+  box-shadow: rgb(0 0 0 / 16%) 0px 10px 30px;
+  border-radius: 8px;
+  padding: 2em;
+}
+
 .weMoveGradient {
   font-size: 72px;
   font-weight: 800;
